- Fixed: Some plugin dialogs would not become visible, or be shown in very small size, with some window managers
- Fixed: Potential crash when using context menus with "focus follows mouse" window activation policy
- Add shortcut Ctrl+Enter to insert a linebreak and submit from a script editor
- Reduce CPU usage while idle
- Pareto-plot plugin gains more tabulation options				TODO: also use in piechart, barplot
- rk.results() now prints rownames, where appropriate			TODO: test
- "frame" elements in plugins can now be made checkable
- Disabling or hiding a plugin component makes it non-required, implicitly		TODO: remove explicit connections to component.required in the plugins.
- Boxplot gains option to dogde grouped boxes						TODO: add test; add colors?
- Simplify internal handling of system() and system2() output					TODO: test on Windows!
- Simplify code produced by several plugins
- Fixed: Occasional duplication of first letter of keyword, when using "Copy lines to output" from the console window

--- Version 0.5.6 - May-30-2011
- Fixed: Would crash when searching for a term with quotes in the help search window
- Add simple man page for command line options
- Fixed: Potential crash when creating plots from a tcl/tk based GUI
- Fix compilation on FreeBSD
- Replace the R console's "Copy selection cleaned" action with "Copy commands, only", which will omit any non-command regions in the copy
- Add "Copy lines to output" action to copy highlighted lines from the R console or script editors to the output window
- R commands and their output can be "carbon copied" to the output window
- On Windows, RKWard will detect, and offer to disable "native" file system dialogs
- Object browsers that show only the global environment now hide the ".GlobalEnv" item
- Fixed: Function argument hints would not be shown in some corner cases
- Added function rk.print.code() to write highlighted R code to the output window
- Box plot plugin gains support for grouped outcome data