@@ -2,7 +2,7 @@
                           rkhelpsearchwindow  -  description
                              -------------------
     begin                : Fri Feb 25 2005
-    copyright            : (C) 2005, 2006, 2007, 2009, 2010 by Thomas Friedrichsmeier
+    copyright            : (C) 2005, 2006, 2007, 2009, 2010, 2011 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -47,7 +47,7 @@ public:
 @param cursor_pos cursor position in the current line
 Will figure out the word under the cursor, and provide help on that (if there is such a word, and such help exists) */
 	void getContextHelp (const QString &context_line, int cursor_pos);
-	void getFunctionHelp (const QString &function_name, const QString &package=QString());
+	void getFunctionHelp (const QString &function_name, const QString &package=QString(), const QString &type=QString ());
 	static RKHelpSearchWindow *mainHelpSearch () { return main_help_search; };
 public slots:
 	void slotFindButtonClicked();
@@ -84,8 +84,12 @@ public:
 	int columnCount (const QModelIndex& parent=QModelIndex()) const;
 	QVariant data (const QModelIndex& index, int role=Qt::DisplayRole) const;
 	QVariant headerData (int section, Qt::Orientation orientation, int role=Qt::DisplayRole) const;
+	QString resultsType (int row);
 private:
-	QStringList results;
+	QStringList topics;
+	QStringList titles;
+	QStringList packages;
+	QStringList types;
 	int result_count;
 };
 
